# Wingman

./: .env.example  .gitignore  config.toml  pyproject.toml  requirements.txt
wingman/: __init__.py  __main__.py  config.py  database.py  scheduler.py
wingman/analysis/: triage.py
wingman/notifications/: email_notifier.py  formatter.py  sms_notifier.py
wingman/utils/: logging_config.py  retry.py
wingman/watchers/: base.py  forge_watcher.py  github_watcher.py  reddit_watcher.py
